# multiplexer

./: .gitignore  Makefile.am  bootstrap.sh  configure.ac  logging.type_id.constants.txt  multiplexer.rules  mxcontrol.cc  server.cc
art/: logo.svgz
azlib/: random.cc  random.h  signals.cc  spanset.h  timer.h  triple.h
azlib/encoders/: DecodeFromRange.h  EncodeToOutputIterator.h
azlib/encodings/: LittleEndian.h
azlib/logging/: Logging.proto  impl.h  log_tokens.h
azlib/preproc/: common.h  create_message.h
azlib/preproc/create_message/: detail.h
azlib/protobuf/: stream.h
azlib/util/: Assert.h  Exception.cc  fd.h  functors.h  str.h  type_utils.h
azouk/: _allinonemodule.cc  _loggingmodule.cc
azouk/logging/: collector.py
azouk/services/collectors/: events.py
azouk/util/: kwargs.cc  kwargs.h
lib/: .gitignore  Makefile_protoc  Makefile_v_copy
m4/: ax_with_prog_required.m4  azouk_python_config.m4  boost.m4  cxx_try_link_flag.m4  gnulib-cache.m4
multiplexer/: BasicClient.cc  BasicClient.h  Client.cc  Client.h  ConnectionsManager.cc  ConnectionsManager.h  multiplexer.constants.h  protocolbuffers.py
multiplexer/test/: test_mxclient.py
mxcontrol-commands/: Help.cc  ReceiveLogs.cc  StartMultiplexerServer.cc  Task.cc  TasksHolder.h
src/: .gitignore  Makefile  Makefile.am  configure.ac  multiplexer.rules  mxcontrol.cc  run_tests.sh  server.cc
src/azlib/: hash_map.h  hash_set.h  initialization.h  logging.cc  logging.h  macros.h  program.h  random.cc  repr.h  signals.cc  str.h  timer.h  vector.h
src/azlib/encoders/: BaseDecoder.h  BaseEncoder.h  EncodeToOutputIterator.h
src/azlib/logging/: Logging.proto  impl.h  log_tokens.h
src/azlib/preproc/: common.h  kwargs.h
src/azlib/protobuf/: stream.h
src/azlib/util/: Assert.h  type_utils.h
src/azouk/: Makefile  Makefile.am  _allinonemodule.cc  _loggingmodule.cc  generate_constants.cc  mxcontrol.cc  server.cc  update-version-bash-file  xrelease.cc  xrelease.h
src/azouk/azlib/: hash_map.h  logging.cc  logging.h  random.h  signals.cc  signals.h  spanset.h  timer.h  triple.h
src/azouk/azlib/encoders/: DecodeFromRange.h
src/azouk/azlib/encodings/: LittleEndian.h
src/azouk/azlib/logging/: Logging.proto  impl.h
src/azouk/azlib/preproc/: create_message.h  kwargs.h
src/azouk/azlib/protobuf/: stream.h
src/azouk/azlib/util/: IntrusiveValue.h
src/azouk/azouk/: _loggingmodule.cc  release.h  xrelease.cc  xrelease.h
src/azouk/azouk/logging/: __init__.py  streaming.py
src/azouk/azouk/util/: Timer.py  decorators.py  kwargs.h
src/azouk/logging/: __init__.py  collector.py  django_termcolors.py
src/azouk/multiplexer/: BasicClient.cc  BasicClient.h  Client.cc  Client.h  Config.h  ConnectionsManager.h  Multiplexer.proto  Server.cc  Server.h  _mxclientmodule.cc  clients.py  configuration.h  multiplexer.constants.h  mxclient.py
src/azouk/multiplexer/backend/: BaseMultiplexerServer.cc
src/azouk/multiplexer/io/: Connection.h  RawMessage.h
src/azouk/multiplexer/test/: test_simple_connection.py
src/azouk/mxcontrol-commands/: ReceiveLogs.cc  StartMultiplexerServer.cc  StartMultiplexerServer.h  StreamLogs.cc  Task.h
src/azouk/util/: decorators.py
src/m4/: .gitignore
src/multiplexer/: BasicClient.cc  Client.cc  Client.h  Config.h  ConnectionsManager.cc  ConnectionsManager.h  Makefile  Server.cc  Server.h  _mxclientmodule.cc  clients.py  generate_constants.cc  logging.type_id.constants.txt  multiplexer.rules  mxclient.py  run_tests.sh  update-version-bash-file
src/multiplexer/azlib/: debug.h  hash_map.h  hash_set.h  initialization.h  logging.cc  logging.h  macros.h  program.h  signals.cc  signals.h  timer.h
src/multiplexer/azlib/encoders/: BaseDecoder.h  BaseEncoder.h  EncodeToRange.h
src/multiplexer/azlib/logging/: Logging.proto  impl.h  log_tokens.h
src/multiplexer/azlib/preproc/: kwargs.h
src/multiplexer/azlib/preproc/create_message/: detail.h
src/multiplexer/azlib/protobuf/: stream.h
src/multiplexer/azlib/util/: Assert.cc  Assert.h  Exception.cc  Exception.h  IntrusiveValue.h  fd.h  functors.h  str.h  type_functors.h  type_utils.h
src/multiplexer/azouk/: _allinonemodule.cc
src/multiplexer/azouk/logging/: __init__.py  collector.py  django_termcolors.py
src/multiplexer/azouk/services/: __init__.py
src/multiplexer/azouk/services/collectors/: events.py
src/multiplexer/azouk/util/: Timer.py  decorators.py  kwargs.cc
src/multiplexer/backend/: BaseMultiplexerServer.cc  BaseMultiplexerServer.h
src/multiplexer/io/: Connection.h  RawMessage.h
src/multiplexer/multiplexer/: BasicClient.h  Client.h  Config.h  ConnectionsManager.cc  ConnectionsManager.h  Multiplexer.proto  Server.cc  Server.h  _mxclientmodule.cc  clients.py  configuration.h  mxclient.py  protocolbuffers.py
src/multiplexer/multiplexer/backend/: BaseMultiplexerServer.cc  BaseMultiplexerServer.h
src/multiplexer/multiplexer/io/: Connection.h  RawMessage.cc  RawMessage.h
src/multiplexer/multiplexer/test/: test_mxclient.py  test_simple_connection.py
src/multiplexer/mxcontrol-commands/: Help.cc  Help.h  StartMultiplexerServer.h  StreamLogs.cc  Task.cc  Task.h  TasksHolder.cc  TasksHolder.h
src/multiplexer/test/: test_mxclient.py  test_simple_connection.py
src/mxcontrol-commands/: Help.cc  Help.h  ReceiveLogs.cc  StartMultiplexerServer.cc  StreamLogs.cc  Task.cc  Task.h  TasksHolder.cc  Version.cc  Version.h
tools/: .gitignore  Makefile.am  configure.ac
